Adding new config option

--- a/tsusen.conf
+++ b/tsusen.conf
@@ -4,6 +4,9 @@ HTTP_ADDRESS 0.0.0.0
 # Listen port of (stats) HTTP server
 HTTP_PORT 8339
 
+# Use last <TRENDLINE_PERIOD> days for drawing trendlines
+TRENDLINE_PERIOD 7
+
 # Network capture filter (e.g. tcp)
 # Note(s): more info about filters can be found at: https://danielmiessler.com/study/tcpdump/
 CAPTURE_FILTER (tcp[13] == 2) or not tcp
@@ -14,5 +17,5 @@ MONITOR_INTERFACE any
 # Addresses to be ignored in captures
 BLACKLISTED_ADDRESSES 255.255.255.255 127.0.0.1 0.0.0.0
 
-# Flush-write results to log CSV files every given seconds
+# Flush-write results to log CSV files every <WRITE_PERIOD> seconds
 WRITE_PERIOD 900
