--- a/tsusen.conf
+++ b/tsusen.conf
@@ -4,8 +4,14 @@ HTTP_ADDRESS 0.0.0.0
 # Listen port of (stats) HTTP server
 HTTP_PORT 8339
 
+# Minimum daily threshold (per trendline)
+TRENDLINE_DAILY_THRESHOLD 2
+
+# Daily burst (per trendline) which overrides the TRENDLINE_DAILY_THRESHOLD
+TRENDLINE_DAILY_BURST 10
+
 # Use last <TRENDLINE_PERIOD> days for drawing trendlines
-TRENDLINE_PERIOD 7
+TRENDLINE_PERIOD 10
 
 # Network capture filter (e.g. tcp)
 # Note(s): more info about filters can be found at: https://danielmiessler.com/study/tcpdump/
