--- a/tsusen.conf
+++ b/tsusen.conf
@@ -20,8 +20,11 @@ CAPTURE_FILTER (tcp[13] == 2) or not tcp
 # Interface used for monitoring
 MONITOR_INTERFACE any
 
-# Addresses to be ignored in captures
-BLACKLISTED_ADDRESSES 255.255.255.255 127.0.0.1 0.0.0.0
-
 # Flush-write results to log CSV files every <WRITE_PERIOD> seconds
 WRITE_PERIOD 900
+
+# Addresses to be ignored in captures
+IGNORE_ADDRESSES 255.255.255.255 127.0.0.1 0.0.0.0
+
+# Ports to ignore in captures
+IGNORE_PORTS 8338 8339
